# Freeze-Daemon

./: CMakeLists.txt  README.md  module.prop
.github/workflows/: build.yml
config/: appop_restrict_list.txt  freeze.conf  system_blacklist.txt  user_whitelist.txt
scripts/: service.sh  uninstall.sh
scripts/ndk-shims/: libintl.h
src/: main.cpp  vmlinux.h
src/api/: event_dispatcher.h  http_server.h
src/core/: app_label_cache.h  app_list.h  app_state.h  config_store.h  deep_sleep_manager.h  freeze_engine.h
src/platform/: appop_manager.h  bpf_loader.h  cgroup_manager.h  foreground_fallback.h  freeze_monitor.bpf.c  pid_cache.h  safety_checker.h
src/util/: constants.h  file_util.h  logger.h  reboot_flag.h  timer.h
webui/: index.html
